# youbot_ros

./: README.md
youbot_description/: CMakeLists.txt
youbot_description/robots/: youbot-sensors.urdf.xacro  youbot.urdf.xacro
youbot_description/urdf/sensors/: asus_xtion_camera.gazebo.xacro  asus_xtion_camera.urdf.xacro  hokuyo_urg04_laser.gazebo.xacro  hokuyo_urg04_laser.urdf.xacro  kinect_camera.gazebo.xacro  kinect_camera.urdf.xacro  xtion_pro_live.gazebo.xacro  xtion_pro_live.urdf.xacro
youbot_navigation/: CMakeLists.txt  package.xml
youbot_navigation/launch/: move_base.launch  youbot_navigation.launch
youbot_navigation/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml
youbot_simulation/youbot_gazebo_robot/config/: rviz_config.rviz  youbot_lds_2d.lua
youbot_simulation/youbot_gazebo_robot/launch/: youbot.launch
youbot_simulation/youbot_gazebo_worlds/launch/: room_1.launch
youbot_simulation/youbot_gazebo_worlds/worlds/: room_1.world
youbot_slam/: CMakeLists.txt  package.xml
youbot_slam/launch/: youbot_gmapping.launch  youbot_hector.launch
youbot_teleop/: CMakeLists.txt  package.xml
youbot_teleop/src/: youbot_teleop.py
